# mm-ibkr-gateway

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.agent_context/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  OVERVIEW.md
.context/: 00_INDEX.md  00_START_HERE.md  01_DOMAIN.md  01_RULES.md  02_ARCHITECTURE.md  02_OPS.md  03_DATA_CONTRACTS.md  03_DECISIONS.md  04_RISK_GUARDRAILS.md  05_RUNBOOK.md  06_TESTING.md  07_STYLE_AND_PATTERNS.md  08_DEPENDENCIES.md  09_DECISIONS.md  10_GLOSSARY.md  PHASES_6.1-6.5_COMPLETED.md  PHASE_PLAN.md  SCHEMAS.md  TODO_BACKLOG.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
api/: API.md  __init__.py  admin.py  auth.py  boot.py  dependencies.py  errors.py  middleware.py  models.py  server.py  uvicorn_runner.py
api/static/: app.js  index.html  styles.css
deploy/linux/: README.md  docker-compose.yml
deploy/windows/: README.md  boot-reconcile.ps1  configure.ps1  generate-api-key.ps1  healthcheck.ps1  install-api-service.ps1  install-gateway-service.ps1  install-nssm.ps1  setup-firewall.ps1  setup-ibkr-autologin.ps1  setup-tasks.ps1  start-api.ps1  start-gateway.ps1  status.ps1  stop-api.ps1  test-api.ps1  (+4 more)
docs/: API_REFERENCE.md  ARCH_NOTES.md  IBKR_2FA_PLAN.md  SAFETY_CHECKLIST.md
ibkr_core/: __init__.py  __main__.py  account.py  cli.py  client.py  config.py  contracts.py  control.py  demo.py  healthcheck.py  logging_config.py  market_data.py  metrics.py  models.py  orders.py  persistence.py  runtime_config.py  schedule.py  simulation.py
mcp_server/: __init__.py  config.py  errors.py  http_client.py  main.py
nl/: __init__.py
notebooks/: 01_contract_resolution.ipynb  02_market_data.ipynb  03_account_status.ipynb  04_orders.ipynb  05_api_layer.ipynb  README.md
scripts/: __init__.py  deployer.py  export_order_history.py  healthcheck.py  query_audit_log.py  test_audit_logging.py  test_phase1.py
tests/: conftest.py  test_account_pnl.py  test_account_positions.py  test_account_summary.py  test_admin_api.py  test_api_account.py  test_api_health.py  test_api_market_data.py  test_api_orders.py  test_broker.py  test_cli.py  test_client.py  test_config.py  test_contracts.py  test_demo.py  test_guard_integration.py  test_healthcheck.py  test_logging_correlation.py  test_logging_structured.py  test_market_data.py  test_mcp_errors.py  test_mcp_tools.py  test_metrics_collector.py  test_metrics_endpoint.py  test_metrics_integration.py  test_models.py  test_orders_advanced.py  test_orders_advanced_integration.py  test_orders_integration.py  test_orders_safety.py  test_orders_validation.py  test_persistence_audit.py  test_schedule.py  test_simulation_client.py  test_simulation_integration.py  test_simulation_orders.py  test_time_window_middleware.py
(+11 files in other folders)
