[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mm-ibkr-gateway"
version = "0.1.0"
description = "IBKR integration + MCP tool server + NL interface"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0"
]

[tool.poetry]
name = "mm-ibkr-gateway"
version = "0.1.0"
description = "IBKR integration + MCP tool server + NL interface"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "api"},
    {include = "ibkr_core"},
    {include = "mcp_server"},
    {include = "nl"},
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.10"
ib-insync = "^0.9.17"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.0"
python-dotenv = "^1.0"
aiohttp = "^3.9"
loguru = "^0.7"
nest-asyncio = "^1.5"
mcp = "^1.2"
httpx = "^0.27"
typer = {version = "^0.9.0", extras = ["all"]}
rich = "^13.7"

[tool.poetry.scripts]
ibkr-gateway = "ibkr_core.cli:cli_main"
ibkr-mcp = "mcp_server.main:main"
ibkr-demo = "ibkr_core.demo:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
black = "^23.12"
isort = "^5.13"
mypy = "^1.7"
flake8 = "^6.1"
httpx = "^0.25"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require running IBKR Gateway (deselect with '-m \"not integration\"')",
]
