[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mm-ibkr-gateway"
version = "0.1.0"
description = "Agent-focused deployment repository for Interactive Brokers Gateway"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[tool.poetry]
name = "mm-ibkr-gateway"
version = "0.1.0"
description = "Agent-focused deployment repository for Interactive Brokers Gateway"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.9.0,<1.0"
python-dotenv = ">=1.0,<2.0"
rich = ">=13.7,<15.0"

[tool.poetry.scripts]
ib-deployer = "scripts.deployer:app"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
isort = "^5.13"
mypy = "^1.7"
flake8 = "^6.1"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
